--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   profiles:
     include:
       - domain
-#  mvc:
-#    pathmatch:
-#      matching-strategy: ant_path_matcher
+  mvc:
+    path match:
+      matching-strategy: ant_path_matcher
 #
 #server:
 #  port: 80
